--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		        </dialog>
 		    </div>
 		</script> 
-		<ng-include src="'partials/appList.html'"></ng-include>
+		<!-- <ng-include src="'partials/appList.html'"></ng-include> -->
 		<ng-view />
 		<script src="lib/require-2.1.9.min.js" data-main="app/init"></script>
 	</body>
