--- a/client2/source/resource/index.html
+++ b/client2/source/resource/index.html
@@ -8,6 +8,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="format-detection" content="telephone=no">
+  <link rel="shortcut icon" type="image/x-icon" href="resource/ota/favicon.ico" />
+
 
   <script type="text/javascript" src="script/ota.js"></script>
 </head>
