--- a/server/index.html
+++ b/server/index.html
@@ -191,8 +191,7 @@ a:active {
          <h2>5.0</h2>
         <div class="grid"></div>
         <p id="b1"><a href="/mad-ca.crt" class="btn2">Install Certificate</a></p>
-        <p id="b2"><a href="https://192.168.0.3:8443/client-web/" class="btn2">Launch</a></p>
+        <p id="b2"><a href="{{link}}" class="btn2">Launch</a></p>
     </div>
-
 </body>
 </html>
